--- a/htmlreader.html
+++ b/htmlreader.html
@@ -136,6 +136,7 @@
       display: block;
     }
   </style>
+  
 </head>
 <body>
   <!-- Кнопка "Редактировать" -->
@@ -186,6 +187,86 @@
     const overlay = document.getElementById('overlay');
     const codeEl = document.getElementById('code');
     const outputEl = document.getElementById('output');
+  
+    // 💅 Стили для таблиц (внедряем внутрь iframe)
+    const TABLE_STYLES = `
+      <style>
+        /* Стили для семантических таблиц */
+        .pdf-table {
+          width: 100%;
+          border-collapse: collapse;
+          margin: 20px 0;
+          font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+          font-size: 14px;
+          color: #333;
+          background: white;
+          box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        }
+        .pdf-table th,
+        .pdf-table td {
+          border: 1px solid #ccc;
+          padding: 10px 12px;
+          text-align: left;
+          vertical-align: top;
+        }
+        .pdf-table tbody tr:nth-child(even) {
+          background-color: #f9f9f9;
+        }
+        .pdf-table thead th {
+          background-color: #f0f0f0;
+          font-weight: 600;
+          color: #222;
+        }
+      </style>
+    `;
+  
+    function updatePreview() {
+      let html = codeEl.value.trim();
+  
+      // Если в коде есть <head> — вставляем стили туда
+      if (html.includes('<head>')) {
+        html = html.replace('<head>', `<head>\n${TABLE_STYLES}`);
+      } 
+      // Иначе — вставляем в начало <body> или просто в начало
+      else if (html.includes('<body>')) {
+        html = html.replace('<body>', `<body>\n${TABLE_STYLES}`);
+      } 
+      else {
+        // Просто добавляем в начало
+        html = TABLE_STYLES + html;
+      }
+  
+      const doc = outputEl.contentDocument || outputEl.contentWindow.document;
+      doc.open();
+      doc.write(html);
+      doc.close();
+    }
+  
+    function openEditor() {
+      editorPanel.classList.add('active');
+      overlay.classList.add('active');
+      updatePreview();
+    }
+  
+    function closeEditor() {
+      editorPanel.classList.remove('active');
+      overlay.classList.remove('active');
+    }
+  
+    toggleBtn.addEventListener('click', openEditor);
+    closeBtn.addEventListener('click', closeEditor);
+    overlay.addEventListener('click', closeEditor);
+    codeEl.addEventListener('input', updatePreview);
+  
+    updatePreview();
+  </script>
+  <!-- <script>
+    const toggleBtn = document.getElementById('toggle-btn');
+    const closeBtn = document.getElementById('close-btn');
+    const editorPanel = document.getElementById('editor-panel');
+    const overlay = document.getElementById('overlay');
+    const codeEl = document.getElementById('code');
+    const outputEl = document.getElementById('output');
 
     function updatePreview() {
       const doc = outputEl.contentDocument || outputEl.contentWindow.document;
@@ -214,7 +295,6 @@
 
     // Первый рендер
     updatePreview();
-  </script>
+  </script> -->
 </body>
 </html>
-
