--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
       <li onclick="showPage('page-tolerance')">📏 Допуски</li>
       <li><a href="elements.html" style="color: inherit; text-decoration: none;">⚛ Материалы</a></li>
       <li><a href="catalog.html" style="color: inherit; text-decoration: none;">📚 Справочник</a></li>
-      <li><a href="pdfreader.html" style="color: inherit; text-decoration: none;">🅰️ pdf_reader</a></li>
-      <li><a href="tesseract.html" style="color: inherit; text-decoration: none;">♻️ to_html</a></li>
+      <!-- <li><a href="pdfreader.html" style="color: inherit; text-decoration: none;">🅰️ pdf_reader</a></li> -->
+      <li><a href="tesseract.html" style="color: inherit; text-decoration: none;">🅰️ pdf_reader</a></li>
       <li><a href="htmlreader.html" style="color: inherit; text-decoration: none;">⌨️ html_Read</a></li>
       <!-- <li onclick="showPage('inspectorcontrols')">⚙️ Параметры контроля</li> -->
       <!-- <li onclick="showPage('page-inspection')">🔍 Проверки</li> -->
@@ -207,6 +207,7 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
