--- a/tesseract.html
+++ b/tesseract.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>pdf > html</title>
+  <title>gost_reader</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
   <script src="https://unpkg.com/tesseract.js@5.0.3/dist/tesseract.min.js"></script>
   <style>
@@ -206,7 +206,7 @@ h2
 </head>
 <body>
   <div class="container">
-    <h2>pdf > html</h2>
+    <h2>gost reader</h2>
     <p style="padding: 5px;"><a href="index.html" style="color: inherit; text-decoration: none; display: block; height: 40px; width: 40px; position: absolute; top: 0; left: 0; margin: 10px;">↩️ </a></p>
     <div class="panel">
       <input type="file" id="pdfFile" accept="application/pdf" />
@@ -314,7 +314,8 @@ font-size: 18px; z-index: 9999;
 
 <!-- Панель умной клетки (изначально скрыта) -->
 <div id="smartCellPanel" style="
-position: fixed; top: 10px; left: 5%; right: 5%; 
+position: fixed; top: 10px; left: 1%;
+width: 86%; max-width: 500px;
 background: white; padding: 16px; border-radius: 12px; 
 box-shadow: 0 4px 20px rgba(0,0,0,0.25); 
 z-index: 2000; font-size: 14px;
@@ -327,13 +328,14 @@ display: none; /* скрыта по умолчанию */
 <div style="margin-top: 12px; display: grid; grid-template-columns: 1fr 1fr; gap: 6px;">
   <!-- Левый столбец: ← → -->
   <div style="display: flex; flex-direction: column; gap: 6px;">
-    <button id="smartLeft" style="height: 40px;">←</button>
-    <button id="smartRight" style="height: 40px;">→</button>
-  </div>
-  <!-- Правый столбец: ↑ ↓ -->
-  <div style="display: flex; flex-direction: column; gap: 6px;">
     <button id="smartUp" style="height: 40px;">↑</button>
     <button id="smartDown" style="height: 40px;">↓</button>
+  </div>
+
+  <!-- Правый столбец: ↑ ↓ -->
+  <div style="display: flex; flex-direction: column; gap: 6px;">
+    <button id="smartLeft" style="height: 40px;">←</button>
+    <button id="smartRight" style="height: 40px;">→</button>
   </div>
 </div>
 
@@ -2076,7 +2078,7 @@ function displayShootTree(tree) {
         return;
     }
     
-    let html = `<div style="margin-bottom: 10px; font-weight: bold; color: #2c3e50;">🌳 Дерево прострела:</div>`;
+    let html = `<div style="margin-bottom: 10px; font-weight: bold; color: #2c3e50;"> строка:</div>`;
     
     // Рекурсивная функция для построения HTML
     function buildTreeHtml(node, level = 0) {
@@ -2214,6 +2216,7 @@ function showCellInfo(cellId, direction = 'self') {
 });
   
   </script>
+
 
 
   
