--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
     <!-- <button class="close-btn" onclick="closeSidebar()">×</button> -->
     <br>
     <h3>Меню</h3>
-    <ul>
+        <ul>
       <li><a href="inspectorcontrols.html" style="color: inherit; text-decoration: none; display: block; height: 100%;">⚙️ Параметры контроля</a></li>
       <li onclick="showPage('page-tolerance')">📏 Допуски</li>
       <li><a href="elements.html" style="color: inherit; text-decoration: none;">⚛ Материалы</a></li>
       <li><a href="catalog.html" style="color: inherit; text-decoration: none;">📚 Справочник</a></li>
       <!-- <li><a href="pdfreader.html" style="color: inherit; text-decoration: none;">🅰️ pdf_reader</a></li> -->
-      <li><a href="tesseract.html" style="color: inherit; text-decoration: none;">🅰️ pdf_reader</a></li>
+      <li><a href="tesseract.html" style="color: inherit; text-decoration: none;">🅰️ gost_reader</a></li>
+      <li><a href="vectorize3.html" style="color: inherit; text-decoration: none;">♻ vectorize</a></li>
+      
       <li><a href="htmlreader.html" style="color: inherit; text-decoration: none;">⌨️ html_Read</a></li>
       <!-- <li onclick="showPage('inspectorcontrols')">⚙️ Параметры контроля</li> -->
       <!-- <li onclick="showPage('page-inspection')">🔍 Проверки</li> -->
@@ -64,7 +66,6 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
 
       <!-- <li onclick="showPage('page-skill-tree')">🌟 древо умений</li> -->
     </ul>
-
       <!-- Кнопка загрузки кассеты -->
 <div id="knowledge-loader" style="position: relative; top: 10px; left: 10px; z-index: 1000;">
   <input type="file" id="knowledgePack" accept=".zip" style="display: none;">
@@ -207,6 +208,7 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
