--- a/vectorize3.html
+++ b/vectorize3.html
@@ -47,7 +47,7 @@
   </style>
 </head>
 <body>
-
+<p style="padding: 5px;"><a href="index.html" style="color: inherit; text-decoration: none; display: block; height: 40px; width: 40px; position: absolute; top: 0; left: 0; margin: 10px;">↩️ </a></p>
   <input type="file" id="pdfInput" accept=".pdf" style="display:none;">
   <div id="drop"><a href="#" id="pdfSelect">открыть PDF</a><br>или сюда</div>
 
@@ -194,4 +194,5 @@
     });
   </script>
 </body>
+
 </html>
