--- a/htmlreader.html
+++ b/htmlreader.html
@@ -907,29 +907,70 @@ toggleDrawBtn.addEventListener('click', () => {
   document.body.style.cursor = drawMode ? 'crosshair' : 'default';
 });
 
-// Начало рисования
+// Универсальная функция получения координат
+function getCoords(e) {
+  const rect = canvas.getBoundingClientRect();
+  let x, y;
+
+  if (e.type.startsWith('touch')) {
+    const touch = e.touches[0] || e.changedTouches[0];
+    x = touch.clientX - rect.left;
+    y = touch.clientY - rect.top;
+  } else {
+    x = e.clientX - rect.left;
+    y = e.clientY - rect.top;
+  }
+
+  return { x, y };
+}
+
+// === Обработчики для мыши ===
 canvas.addEventListener('mousedown', (e) => {
   if (!drawMode) return;
   isDrawing = true;
-  [lastX, lastY] = [e.offsetX, e.offsetY];
+  const { x, y } = getCoords(e);
+  [lastX, lastY] = [x, y];
+  e.preventDefault(); // предотвращает выделение и т.п.
 });
-
-function pushPoint(x, y) {
-  currentPath.push({
-    x, y,
-    color: colorPicker.value,
-    width: lineWidthInput.value
-  });
-}
 
 canvas.addEventListener('mousemove', (e) => {
   if (!isDrawing) return;
+  const { x, y } = getCoords(e);
+  drawSegment(x, y);
+  [lastX, lastY] = [x, y];
+  e.preventDefault();
+});
 
-  const rect = canvas.getBoundingClientRect();
-  const x = e.clientX - rect.left;
-  const y = e.clientY - rect.top;
+canvas.addEventListener('mouseup', () => {
+  finishDrawing();
+});
+canvas.addEventListener('mouseout', () => {
+  isDrawing = false;
+});
 
-  // Рисуем локально
+// === Обработчики для тач-устройств ===
+canvas.addEventListener('touchstart', (e) => {
+  if (!drawMode) return;
+  isDrawing = true;
+  const { x, y } = getCoords(e);
+  [lastX, lastY] = [x, y];
+  e.preventDefault(); // ОБЯЗАТЕЛЬНО — иначе прокрутка страницы мешает
+});
+
+canvas.addEventListener('touchmove', (e) => {
+  if (!isDrawing) return;
+  const { x, y } = getCoords(e);
+  drawSegment(x, y);
+  [lastX, lastY] = [x, y];
+  e.preventDefault(); // ОБЯЗАТЕЛЬНО — отключает прокрутку при рисовании
+});
+
+canvas.addEventListener('touchend', () => {
+  finishDrawing();
+});
+
+// Вынесем логику рисования в функцию
+function drawSegment(x, y) {
   ctx.beginPath();
   ctx.moveTo(lastX, lastY);
   ctx.lineTo(x, y);
@@ -938,41 +979,19 @@ canvas.addEventListener('mousemove', (e) => {
   ctx.lineCap = 'round';
   ctx.stroke();
 
-  // Сохраняем предыдущую точку в буфер
   pushPoint(lastX, lastY);
+}
 
-  [lastX, lastY] = [x, y];
-});
-
-// canvas.addEventListener('mousemove', (e) => {
-//   if (!isDrawing) return;
-//   ctx.beginPath();
-//   ctx.moveTo(lastX, lastY);
-//   ctx.lineTo(e.offsetX, e.offsetY);
-//   ctx.strokeStyle = colorPicker.value;
-//   ctx.lineWidth = lineWidthInput.value;
-//   ctx.lineCap = 'round';
-//   ctx.stroke();
-//   [lastX, lastY] = [e.offsetX, e.offsetY];
-// });
-
-canvas.addEventListener('mouseup', () => {
+function finishDrawing() {
   if (currentPath.length > 1) {
     drawingsRef.push({
       points: currentPath,
-      // user: myName,
       timestamp: Date.now()
     });
-    currentPath = []; // Очищаем буфер
+    currentPath = [];
   }
   isDrawing = false;
-});
-// canvas.addEventListener('mouseup', () => {
-//   isDrawing = false;
-// });
-canvas.addEventListener('mouseout', () => {
-  isDrawing = false;
-});
+}
 
 document.getElementById('clear-canvas').addEventListener('click', () => {
   // if (confirm('Удалить все аннотации? Это повлияет на всех.')) {
@@ -1143,3 +1162,4 @@ document.body.appendChild(clearChatBtn);
 
 </body>
 </html>
+
