--- a/vectorize3.html
+++ b/vectorize3.html
@@ -97,7 +97,7 @@
   </style>
 </head>
 <body>
-
+<p style="padding: 5px;"><a href="index.html" style="color: inherit; text-decoration: none; display: block; height: 40px; width: 40px; position: absolute; top: 0; left: 0; margin: 10px;">↩️ </a></p>
   <input type="file" id="pdfInput" accept=".pdf" style="display:none;">
 <div id="controls">
   <a href="#" id="pdfSelect">открыть PDF</a>
@@ -416,3 +416,4 @@ document.addEventListener('touchend', stopResize);
   </script>
 </body>
 </html>
+
